objects/appirio_core__Config_Value__c.object
<CustomObject>
    <customHelpPage>appirio_core__ConfigurationHelp</customHelpPage>
    <description>Core package object. Edit, add, or delete configuration values to change the setup or behavior of FinancialForce PSA. Each configuration value is contained in a configuration option and defines a value--for example, true or false. Configuration values may also define sort order, display width, or custom attributes depending on the parent configuration option. Configuration values have a master-detail lookup to their parent configuration group.</description>
    <fields>
        <fullName>appirio_core__Config_Option__c</fullName>
        <label>Configuration Option</label>
        <referenceTo>appirio_core__Config_Option__c</referenceTo>
        <relationshipLabel>Values</relationshipLabel>
        <relationshipName>Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appirio_core__Custom_Attribute_1__c</fullName>
        <description>An optional attribute</description>
        <label>Custom Attribute 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appirio_core__Custom_Attribute_2__c</fullName>
        <description>An optional attribute</description>
        <label>Custom Attribute 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appirio_core__Display_Width__c</fullName>
        <description>Optional value that indicates the display width of the field displaying this value.</description>
        <inlineHelpText>Optional value that indicates the display width of the control displaying this value.</inlineHelpText>
        <label>Display Width</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Sort__c</fullName>
        <description>Optional sort order for values</description>
        <label>Sort</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Value__c</fullName>
        <label>Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Configuration Value</label>
    <nameField>
        <displayFormat>CV{000000}</displayFormat>
        <label>Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>